--- a/musician.html
+++ b/musician.html
@@ -70,11 +70,11 @@
                     break;
                 case 2:
                     image.src = "Alderflies.jpg"
-                    useImage = 2;
+                    useImage = useImage +1;
                     break;
                 case 3:
                     image.src = "Antlions.jpg"
-                    useImage = 3;
+                    useImage = useImage +1;
                     break;
                 default:
                     break;
