--- a/musician.html
+++ b/musician.html
@@ -36,7 +36,7 @@
         <input type="button" class="btn btn-sm btn-success" onclick="checkGuess()" value="Check the guess">
     </form>
     <br>
-    <p id="result">"Correct and Wrong Count displayed here!"</p>
+    <p id="result">"The count can be seen here!"</p>
 
     <div class="container">
         <img src="Dragonfly.jpg" alt="Image of Dragonfly insect" id="image" height="100" width="100"
