--- a/musician.html
+++ b/musician.html
@@ -58,7 +58,8 @@
             }
             out.innerHTML = "Number of Right Count is " + correct + " Number of Wrong Count is " + wrong;
         }
-
+    </script>
+    <script>
         let useImage = 1;
         image = document.getElementById("image")
 
@@ -66,15 +67,15 @@
             switch (useImage) {
                 case 1:
                     image.src = "Dragonfly.jpg"
-                    useImage = 1;
+                    useImage=1;
                     break;
                 case 2:
                     image.src = "Alderflies.jpg"
-                    useImage = useImage +1;
+                    useImage = useImage + 1;
                     break;
                 case 3:
                     image.src = "Antlions.jpg"
-                    useImage = useImage +1;
+                    useImage = useImage + 1;
                     break;
                 default:
                     break;
@@ -82,6 +83,7 @@
         }
 
     </script>
+</body>
 
 </body>
 
