--- a/vacation.html
+++ b/vacation.html
@@ -17,7 +17,7 @@
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
         crossorigin="anonymous"></script>
 </head>
-</head>
+
 
 <body>
     <h2>Harika Madamanchi selects a vacation</h2>
@@ -32,38 +32,61 @@
         </div>
         <div>
             <label for="cb1_cheese">Resort</label>
-            <input type="checkbox" id="Resort" name="vacation" value=False > <br>
+            <input type="checkbox" id="Resort" name="vacation" value=False> <br>
         </div>
         <input type="button" class="btn btn-sm btn-success" onclick="selectVacation()" value="select a vacation">
     </form>
     <p id="results">"The result can be seen here!"</p>
+    <form>
+        <label for="city">Enter a city</label>
+        <input type="text" id="city" name="form-city" value="city"> <br>
+
+        <label for="price">Enter price</label>
+        <input type="text" id="price" name="form-price"> <br>
+
+        <input type="button" class="btn btn-success" value="Update the vacation" onclick="updateVacation()">
+        <p id="result">"The result can be seen here!"</p>
+    </form>
 
     <script>
-        var my_vacation = "";
-    function selectVacation() {
-        my_vacation = {};
-        let bytravel = document.getElementById("Travel").checked
-        let bydomestic = document.getElementById("Domestic").checked
-        let byresort = document.getElementById("Resort").checked
-        if (bytravel) {
-            my_vacation.Travel = true;
+        var my_vacation = {};
+        function selectVacation() {
+            my_vacation = {};
+            let bytravel = document.getElementById("Travel").checked
+            let bydomestic = document.getElementById("Domestic").checked
+            let byresort = document.getElementById("Resort").checked
+            if (bytravel) {
+                my_vacation.Travel = true;
+            }
+            else {
+                my_vacation.Travel = false;
+            }
+            if (bydomestic) {
+                my_vacation.Domestic = true;
+            }
+            else {
+                my_vacation.Domestic = false;
+            }
+            if (byresort) {
+                my_vacation.Resort = true;
+            }
+            else {
+                my_vacation.Resort = false;
+            }
+            document.getElementById("results").innerHTML = JSON.stringify(my_vacation)
         }
-        else {
-            my_vacation.Travel = false;
+    </script>
+    <script>
+        var my_vacation = {};
+        function updateVacation() {
+            let city = document.getElementById("city").value;
+            let price = document.getElementById("price").value;
+            my_vacation["city"] = city;
+            my_vacation["price"] = price;
+
+            document.getElementById("result").innerHTML = JSON.stringify(my_vacation)
         }
-        if (bydomestic) {
-            my_vacation.Domestic = true;
-        }
-        else {
-            my_vacation.Domestic = false;
-        }
-        if (byresort) {
-            my_vacation.Resort = true;
-        }
-        else {
-            my_vacation.Resort = false;
-        }
-        document.getElementById("results").innerHTML = JSON.stringify(my_vacation)
-    }
     </script>
 </body>
+
+</html>
